# android-git-scanner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: run_tests.yml
android_git_scanner/: __main__.py  utils.py
android_git_scanner/commands/: odex.py  vdex.py
examples/: android_oat_versions.json  oat_android_versions.json  vdex_android_versions.json  vdex_versions.json
tests/: test_android_git_scanner.py
